Endgame: Singularity Changelog

v0.29 (release 2008.??.??):

USER-VISIBLE CHANGES:
* Three new win/loss tracks for the game, including the Psycle source! (Max
  McCracken)

OTHER CHANGES:
- Error logs are handled more sanely on *NIX systems. (Phil, kaol and FM for
  the idea)
- Replaced Bitstream Vera Sans with DejaVu Sans to facilitate future
  translations. (Phil)

v0.28 (release 2008.05.11):

USER-VISIBLE CHANGES:
- Minor text cleanups. (Phil, FM; Cory Hickey and gglouser for some fixes)
- Minor dialog behavior fixes. (FM)
* New non-research task: CPU Pool.  Performs maintenance, construction, jobs.
  Bases with no other task assigned will contribute to the CPU Pool. (FM)
* New non-research task: Sleep.  Bases assigned to Sleep will remain idle and
  be harder to detect.  Note that even a computer can't sleep through
  construction. (FM)
- The CHANGE buttons inside the base dialog now show their hotkeys. (FM)
- The location buttons have had their on-screen positions tweaked. (FM)
- Start location is randomized to any of the 5 available continents. (FM)
* CPU is now used to design constructions, Cash to buy the required items, and
  Labor (time) to assemble the final construction. (FM)
- Location and city names can now be localized. (FM)
- Numbers automatically localize to the correct comma-vs-period usage. (FM)
* Added a new difficulty level: Ultra Hard. (FM, emh for suggestion)
* Build times are now difficulty-dependent. (FM)
* The grace period applied to a new base is now difficulty-dependent. (FM)
* The suspicion gain per discovery is now difficulty-dependent. (FM)
- Bases in a location are now sorted by size, then name. (FM, emh for
  suggestion)
* The global grace period now expires on Normal and above if you build more
  than a certain number of bases, and on Ultra Hard if you build certain types
  of bases. (FM)
- Locations with recently-discovered bases are now more likely to have other
  bases discovered. (FM)